# StockProject

./: .gitignore  API_DOCUMENTATION.md  CMakeLists.txt  README.md  config.json  install.sh
scripts/: app.py  requirements.txt  start_website.sh
src/: Config.cpp  Config.h  DataProcessor.cpp  DataProcessor.h  StockDataLoader.cpp  StockDataLoader.h  Visualizer.cpp  Visualizer.h  main.cpp
